--- a/css/style.css
+++ b/css/style.css
@@ -40,8 +40,30 @@ body {
 }
 .score-count{
 	font-size: 3vmin;
-	color: #D21855;
+	color: #463b3f;
 	font-weight: bold;
+}
+
+#field{
+	display: flex;
+	flex-wrap: wrap;
+	
+	justify-content: space-between;
+}
+.cell{
+	display: block;
+	height: 20px;
+	width: 20px;
+	background-color: #341ca0;
+	border: 4px solid #121214;
+	
+}
+
+.snakeBody{
+	background-color: #1ca044;
+}
+.snakeHead{
+	background-color: #00ff4c;
 }
 
 .canvas-wrapper {
